--- a/css/app.css
+++ b/css/app.css
@@ -572,7 +572,7 @@ button {
   left: -25%; }
 
 .small-2 {
-  width: 16.66667%; }
+  width: 20%; }
 
 .small-push-2 {
   position: relative;
